--- a/src/style/index.less
+++ b/src/style/index.less
@@ -1,5 +1,25 @@
-body{
-	background-color: #f3f3f3;
-	box-shadow: 0 2px 5px 0 rgba(0, 0, 0, .2);
-	border-radius: 2px;
+@import url('./normalize.css');
+body {
+    font-family: "Avenir", "Helvetica Neue", Helvetica, Arial, sans-serif;
+    background: #79a8ae;
+    color: #666;
+    font-size: 16px;
+    line-height: 1.5em;
+    h1 {
+        color: #111111;
+        margin: 0 0 12px 0;
+        font-size: 24px;
+        line-height: 1.5em;
+    }
+    p {
+        margin: 0 0 10x 0;
+    }
+    a {
+        color: #888;
+        text-decoration: none;
+        border-bottom: 1px solid #ccc;
+        &:hover {
+            border-bottom-color: #888888;
+        }
+    }
 }
